# rcd_path_planner

./: .gitignore  CMakeLists.txt  README.md  occ.py  package.xml
.gif/: gif_maker.py
Data/CSV/: 0.csv  0.txt  1.csv  1.json  1.txt  10.csv  10.txt  100.csv  100.txt  101.csv  101.txt  102.csv  102.txt  103.csv  103.txt  104.csv  104.txt  105.csv  105.txt  106.csv  106.txt  107.csv  107.txt  108.csv  108.txt  109.csv  109.txt  11.csv  11.txt  12.csv  12.txt  13.csv  13.txt  14.csv  14.txt  15.csv  15.txt  16.csv  16.txt  17.csv  (+183 more)
Data/sample1/: sample1.ppm  sample1.yaml
Data/sample2/: sample2.ppm  sample2.yaml
Data/sample3/: sample3.ppm  sample3.yaml
Data/sample5/: sample5.ppm  sample5.yaml
config/: grid_params.yaml  interactive_grid_params.yaml  interactive_plotter_params.yaml  params.yaml  rcd_params.yaml
include/apf_planner/: apf.h
maps/dummy/: dummy.ppm  dummy.yaml
maps/mazes/: 0.ppm  0.yaml  1.ppm  1.yaml  10.ppm  10.yaml  11.ppm  11.yaml  12.ppm  12.yaml  13.ppm  13.yaml  14.ppm  14.yaml  15.ppm  15.yaml  16.ppm  16.yaml  17.ppm  17.yaml  18.ppm  18.yaml  19.ppm  19.yaml  2.ppm  2.yaml  20.ppm  20.yaml  21.ppm  21.yaml  22.ppm  22.yaml  23.ppm  23.yaml  24.ppm  24.yaml  25.ppm  25.yaml  26.ppm  26.yaml  (+160 more)
maps/multiple_routes/: multiple_routes.ppm  multiple_routes.yaml
maps/narrow_passage/: narrow_passage.ppm
maps/occ_0_52_22/: occ_0_52_22.ppm  occ_0_52_22.yaml
maps/occ_11_46_24/: occ_11_46_24.ppm  occ_11_46_24.yaml
maps/occ_12_53_54/: occ_12_53_54.ppm  occ_12_53_54.yaml
maps/occ_16_28_58/: occ_16_28_58.yaml
maps/occ_17_22_12/: occ_17_22_12.yaml
maps/occ_17_3_52/: occ_17_3_52.ppm  occ_17_3_52.yaml
maps/occ_19_33_16/: occ_19_33_16.ppm  occ_19_33_16.yaml
maps/occ_21_2_38/: occ_21_2_38.ppm  occ_21_2_38.yaml
maps/occ_2_30_0/: occ_2_30_0.ppm  occ_2_30_0.yaml
maps/poster_example/: poster_example.ppm  poster_example.yaml
maps/random_boxes/: 0.ppm  0.yaml  1.ppm  1.yaml  10.ppm  10.yaml  11.ppm  11.yaml  12.ppm  12.yaml  13.ppm  13.yaml  14.ppm  14.yaml  15.ppm  15.yaml  16.ppm  16.yaml  17.ppm  17.yaml  18.ppm  18.yaml  19.ppm  19.yaml  2.ppm  2.yaml  20.ppm  20.yaml  21.ppm  21.yaml  22.ppm  22.yaml  23.ppm  23.yaml  24.ppm  24.yaml  25.ppm  25.yaml  26.ppm  26.yaml  (+160 more)
maps/random_boxes1/: 0.ppm  13.ppm  13.yaml  14.ppm  14.yaml  15.ppm  16.ppm  19.ppm  2.ppm  20.ppm  22.ppm  22.yaml  23.ppm  24.ppm  26.ppm  27.ppm  28.ppm  29.ppm  29.yaml  31.ppm  33.ppm  33.yaml  35.yaml  36.yaml  37.ppm  39.ppm  4.ppm  4.yaml  (+36 more)
ompl_benchmark/: CMakeLists.txt  LICENSE  README.md  result_demo.ppm  run_bench.sh
ompl_benchmark/src/: main.cpp
proof_of_concept/: ray_caster.py
rcd/: main.py
scripts/: generate_box_maps.py  generate_targets.py  interactive_grid.py  interactive_occ.py  occ.py  png_to_ppm.txt  reflexion.py
src/: apf.cpp  interactive_occ.py  main.cpp  map_handler.cpp  map_handler.hpp  occupancy_grid.py  path_optimizer.cpp  path_optimizer.hpp  path_planner.cpp  path_planner.hpp  racadim.py  raysolver.py  rcd.cpp  rcd.hpp  rcd_graph.cpp  rcd_graph.hpp  utilities.hpp  visualizer.cpp  visualizer.hpp
(+1541 files in other folders)
